kubernetes/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prestashop
  namespace: app
  labels:
    app: prestashop
spec:
  selector:
    matchLabels:
      app: prestashop
  template:
    metadata:
      labels:
        app: prestashop
    spec:
      containers:
        - name: prestashop
          ports:
            - containerPort: 8080
          readinessProbe:
            initialDelaySeconds: 10
            httpGet:
              path: "/"
              port: 8080
          livenessProbe:
            initialDelaySeconds: 10
            httpGet:
              path: "/"
              port: 8080
