kubernetes/base/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: prestashop
  namespace: app
spec:
  selector:
    app: prestashop
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
